# delightful-qt-web-shell

./: .gitignore  .mcp.json  ARCHITECTURE.md  BRIDGE_GUIDE.md  CLAUDE.md  DEF_TYPE_MIGRATION.md  DOCKIFICATION.md  ETHOS.md  Ethos.md  HANDOFF.md  OUR_PHILOSOPHY_AND_CULTURE.md  README.md  TESTING.md  TESTING_GUIDE.md  TUTORIAL.md  bunfig.toml  main.py  package.json  playwright.config.ts  pyproject.toml  xmake.lua
agent-docs/: 01-getting-started.md  03-adding-features.md
android/: gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  android_bridge.cpp
app/: .gitignore  NOTES.md  bunfig.toml  package.json  xmake.lua
app/desktop/: xmake.lua
app/framework/: xmake.lua
app/tools/: generate-qss-themes.ts
app/wasm/: xmake.lua
app/web/: NOTES.md  PHASE_2.md  PHASE_3.md  TODO.md  components.json  package.json  tsconfig.json
app/xmake/: scaffold-bridge.lua  testing.lua
cpp/: main.cpp  todo_store.hpp  web_dist_resources.cpp
desktop/: xmake.lua
desktop/resources/: resources.qrc
desktop/src/: application.cpp  application.hpp  main.cpp  (+1 more)
docs/: FRONTEND_FOCUSED_REFACTOR.md  FRONTEND_REFACTOR.md  FRONTEND_REFACTOR_PHASES.md  FRONTEND_REFACTOR_TRACKER.md  REFACTOR-NATIVE-PHASES.md  REFACTOR-NATIVE-TRACKER.md  REFACTOR-NATIVE.md  REFACTOR.md
e2e/: hello.spec.ts
resources/: app.rc
server/: index.ts
smoke/: qt-renders-react.spec.ts
tools/: validate-bridges.ts
wasm/: xmake.lua
web/: .env.example  index.html  package.json  tsconfig.app.json
xmake/: dev-wasm.lua  dev.lua  scaffold-bridge.lua
(+2786 files in other folders)
